--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
         <link
-            href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css"
+            href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css"
             rel="stylesheet"
         />
         <title>PoI Project</title>
